# cc-kelompok-a-nyawit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
app/: app.tsx
backend/: .env-example  .env.example  .gitignore  Dockerfile  Setup-Docker.ps1  docker-compose.yml  docker-setup-output.txt  nginx.conf  pyproject.toml  requirements-prod.txt  requirements.txt  run_docker.bat  supervisord.conf  temp.py  test_imports.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: assets.py  auth.py  borrow_logs.py  categories.py  conditions.py  health.py  locations.py  transactions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  asset.py  borrow_log.py  category.py  location.py  transaction.py  user.py
backend/app/schemas/: asset.py  borrow_log.py  category.py  location.py  transaction.py  user.py
backend/database/: erd.md  erd.mmd  schema.sql
backend/tests/: conftest.py  test_auth.py  test_crud_smoke.py  test_users.py
components/: AssetDialog.tsx  AssetTable.tsx  GlobalSearch.tsx  LeftNavigation.tsx  MaintenanceStatusChart.tsx  MetricCards.tsx  MobileNavigation.tsx  ReportPreviewDialog.tsx  StatusPieChart.tsx  UserProfileDropdown.tsx
components/ui/: input.tsx  sheet.tsx
data/: it_asset.db
frontend/: ToDoList.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
pages/: AnalyticsPage.tsx  ReportsPage.tsx  SettingsPage.tsx
(+39 files in other folders)
